Fix button alignment

--- a/src/Windows.scss
+++ b/src/Windows.scss
@@ -310,8 +310,12 @@ textarea {
     padding: 0 20px;
     line-height: 1.4;
 
+    .buttons {
+        display: flex;
+        justify-content: flex-end;
+    }
+
     button {
-        float: right;
         margin: 0 5px;
     }
 }
